# factorygame

./: .gitignore  CMakeLists.txt  FactoryGame
src/: main.cpp
src/content/: entities.cpp  entities.hpp  loadingscreen.cpp  loadingscreen.hpp  registry.cpp  registry.hpp  tiles.cpp  tiles.hpp
src/core/: gamestate.cpp  gamestate.hpp  graphics.cpp  graphics.hpp  gui.cpp  gui.hpp  input.cpp  input.hpp  sdlmanager.cpp  sdlmanager.hpp
src/gui/: menuscreen.cpp  menuscreen.hpp
src/world/: entity.cpp  entity.hpp  entityclass.cpp  entityclass.hpp  map.cpp  map.hpp  tile.cpp  tile.hpp  tileclass.cpp  tileclass.hpp
src/world/entities/: drawable.cpp  drawable.hpp  player.cpp  player.hpp
src/world/entities/component/: position.cpp  position.hpp  velocity.cpp  velocity.hpp
src/world/tiles/: ground.hpp
